# YASF

./: .coverage-tmp.html  .deepsource.toml  .envrc  .gitignore  404.html  AGENTS.md  LICENSE  README.md  devenv.nix  devenv.yaml  flake.nix  index.html  mkdocs.yml  objects.inv  pyproject.toml  pyproject.toml.bak  sitemap.xml  todo_gen.md  yasf-env-pkgs.yml  yasf-env-test.yml  yasf-env-test.yml.bak  yasf-env.yml
.github/workflows/: ci.yml  coverage.yml  docs.yml  mkdocs.yml  pypi.yml  python-formatter.yml  python-formatter.yml.bak  release.yml  testing.yml
benchmark/: celes.py
coverage/: covindex.html  d_69e24c92a346e3c2___init___py.html  d_69e24c92a346e3c2_initial_field_py.html  d_69e24c92a346e3c2_log_py.html  d_69e24c92a346e3c2_numerics_py.html  d_69e24c92a346e3c2_optics_py.html  d_69e24c92a346e3c2_parameters_py.html  d_69e24c92a346e3c2_particles_py.html  d_69e24c92a346e3c2_simulation_py.html  d_69e24c92a346e3c2_solver_py.html  d_b8724945d768ba72___init___py.html  d_b8724945d768ba72_cpu_numba_py.html  d_b8724945d768ba72_cuda_numba_py.html  d_b8724945d768ba72_legendre_normalized_trigon_py.html  d_b8724945d768ba72_material_handler_py.html  d_b8724945d768ba72_misc_py.html  d_b8724945d768ba72_spherical_functions_trigon_py.html  d_b8724945d768ba72_t_entry_py.html  index.html  status.json
docs/: index.md  todo.md  todo.py
docs/getting-started/: install.md  usage.md
docs/references/: index.md  initial_field.md  numerics.md  optics.md  parameters.md  particles.md  simulation.md  solver.md
docs/references/functions/: cpu_numba.md  t_entry.md
docs/source/: conf.py  index.md  installation.md  references.bib  testing.md  usage.md
docs/testing/: index.md
docs_sphinx/source/: api.md  conf.py  examples.md  index.md  installation.md  testing.md  todo.md  usage.md
examples/: gaussian_beam_example.py
examples/graphite/: config.json  main.py
examples/lemmon/: config-carbon-pure.json  config-olivine-pure.json  mstm4.inp  pack.sh  test.sh
examples/spaceweather/: config.json  lambda.csv  mstm4.inp  test.sh
examples/tsuchinshan–atlas/: amorphous_carbon_rouleau_martin_1991_be1.csv  config-calcite.json.bak  config-carbon-pure-duley.json  config-carbon-pure.json  config-enstatite.json  config-olivine-carbon.json  config-olivine-pure.json  config-olivine75-carbon25.json  mstm4.inp  test-all.sh  test-carbon-pure.sh  test-olivine-pure.sh  test-olivine75-carbon25.sh  test.sh
getting-started/examples/: index.html
getting-started/install/: index.html
getting-started/usage/: index.html
home/celes/: index.html
home/mstm/: index.html
nix-pkgs/: default.nix  python.nix
nix-pkgs/mkdocs-coverage/: default.nix
nix-pkgs/mstm/: default.nix
nix-pkgs/refidxdb/: default.nix
nix-pkgs/stpyvista/: default.nix
overrides/partials/: comments.html
reference/benchmark/adda/: index.html
reference/benchmark/mstm3/: index.html
reference/benchmark/mstm4/: index.html
reference/cli/: index.html
reference/computers/computer/: index.html
reference/computers/computer_cpu/: index.html
reference/computers/computer_cuda/: index.html
reference/config/: index.html
reference/functions/cpu_numba/: index.html
reference/functions/cuda_numba/: index.html
reference/functions/legendre_normalized_trigon/: index.html
reference/functions/material_handler/: index.html
reference/functions/misc/: index.html
reference/functions/spherical_functions_trigon/: index.html
reference/functions/t_entry/: index.html
reference/initial_field/: index.html
reference/log/: index.html
reference/numerics/: index.html
reference/optics/: index.html
reference/parameters/: index.html
reference/particles/: index.html
reference/simulation/: index.html
reference/solver/: index.html
reference/summary/: index.html
reference/yasf/: index.html
scripts/: gen_ref_pages.py  gen_todo.py  todo.py
search/: search_index.json
testing/: index.html
tests/: test_celes.py  test_compare_mstm4.py  test_comparison.py  test_config_dimensional_scale.py  test_coupling_backend_selection.py  test_fmm_treecode.py  test_full_simulation.py  test_gpu_env_helpers.py  test_miepython_single_sphere.py  test_mstm_mat.py  test_mueller.py  test_nearfar_backend.py  test_preconditioner.py  test_public_api_imports.py  test_tiled_dense_backend.py  test_url_handlers.py  test_wavebundle.py  test_wavebundle_validation.py  testing-env.yaml
tests/data/: celes_2023-05-09_21-00-48.fits  coupling_matrix_multiply_data.mat  dx_xz_data.mat  fe_querry.csv  full_simulation_data.mat  legendre_normalized_trigon_data.mat  multi2single_index_data.mat  sph_bessel_data.mat  spherical_functions_trigon_data.mat  t_entry_data.mat  test_config.mat  transformation_coefficients_data.mat  translation_table_ab_data.mat  wavebundle_test_data.mat
tests/matlab/: README_WAVEBUNDLE.md  generate_wavebundle_test_data.m
todo/: index.html
todo_gen/: index.html
yasfpy/: __init__.py  cli.py  config.py  export.py  fields.py  initial_field.py  initial_field_coefficients.py  log.py  lookups.py  matrix_apply.py  mie_coefficients.py  mueller.py  numerics.py  optics.py  parameters.py  particles.py  preconditioner.py  scattered_field_coefficients.py  simulation.py  solver.py  yasf.py
yasfpy/apps/: __init__.py  dolp.py  main.py  particles.py
yasfpy/benchmark/: __init__.py  adda.py  bench_coupling_backends.py  bench_fmm_treecode.py  bench_yasf_vs_mstm4.py  compare_mstm4.py  mstm3.py  mstm4.py
yasfpy/computers/: computer_cpu.py
yasfpy/coupling/: __init__.py  backends.py  cpu_dense.py  cuda_dense.py  env.py  factory.py  ops.py
yasfpy/fmm/: __init__.py  treecode.py
yasfpy/functions/: __init__.py  cpu_numba.py  cuda_numba.py  legendre_normalized_trigon.py  material_handler.py  misc.py  spherical_functions_trigon.py  t_entry.py
