[project]
name = "yasfpy"
version = "0.0.13"
description = "Light scattering code using T-Matrix"
readme = "README.md"
authors = [{ name = "Mirza Arnaut", email = "mirza.arnaut@tu-dortmund.de" }]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.9.2",
  "rich>=13.8.1",
  "numpy<2.0.0,>=1.26.3",
  "scipy>=1.13.0",
  "numba>=0.59.0",
  # "numba-cuda[cu12]>=0.23.0",
  # "numba-cuda>=0.23.0",
  "pyyaml>=6.0.1",
  "pandas>=2.2",
  "requests>=2.31.0",
  "pywigxjpf>=1.11",
  # "refractiveindex>=0.0.3",
  "pyperf>=2.7.0",
  "pyinstrument>=4.7.3",
  # "speedscope>=1.0",
  "refidxdb>=0.4.0",
  "click>=8.1.7",
  "intel-cmplr-lib-rt>=2025.3.1",
]

[project.optional-dependencies]
cuda = ["cuda-python>=12.6.0", "pynvjitlink-cu12>=0.2.3"]
explore = [
  "streamlit>=1.40.1",
  "plotly>=5.24.1",
  "pyvista<0.45.0",
  "stpyvista>=0.1.4",
]

[dependency-groups]
docs = [
  "mkdocs>=1.5.3",
  "mkdocs-autorefs>=0.5.0",
  "mkdocs-coverage>=1.0.0",
  "mkdocs-gen-files>=0.5.0",
  "mkdocs-literate-nav>=0.6.1",
  "mkdocs-material>=9.5.6",
  "mkdocs-section-index>=0.3.8",
  "mkdocstrings>=0.24.0",
  "mkdocstrings-python>=1.8.0",
  "pymdown-extensions>=10.7",
]
test = [
  "astropy>=6.0.0",
  "coverage>=7.4.1",
  "pytest>=8.0.0",
  "pytest-cov>=4.1.0",
]

[project.scripts]
yasf = "yasfpy.cli:cli"

[tool.uv.sources]
pynvjitlink-cu12 = { index = "nvidia" }

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"

[tool.uv.build-backend]
module-name = "yasfpy"
module-root = ""

[tool.pyright]
exclude = [".venv"]
venvPath = ".venv"
venv = "."

[tool.ty.environment]
python = "./.venv"

[tool.ruff]
lint.ignore = ["F722"]

[tool.pytest.ini_options]
python_files = "tests/test_*.py"
log_cli = false
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[build-system]
requires = ["uv_build >= 0.8.0, <0.10.0"]
build-backend = "uv_build"

[semantic_release]
version_variable = ["yasfpy/__init__.py:__version__"]
version_toml = ["pyproject.toml:project.version:nf"]
major_on_zero = false
branch = "main"
build_command = "curl -LsSf https://astral.sh/uv/install.sh | sh && source $HOME/.local/bin/env && uv build"
